--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -48,6 +48,8 @@ fbq('init', '1647788982264575');
 fbq('init', '899302764345252');
 fbq('init', '1062178674704484');
 fbq('init', '1636910023354201');
+fbq('init', '587891225901603');
+fbq('init', '326181576364172');
 fbq('track', 'AddToCart');
 </script>
 <noscript><img height="1" width="1" style="display:none"
