--- a/presell5/index.html
+++ b/presell5/index.html
@@ -48,7 +48,7 @@ src="https://www.facebook.com/tr?id=492585505773513&ev=AddToCart&noscript=1"
     
         <div class="p1"> 	 Essa vitamina 100% natural, que combate a gordura naturalmente, chamou a atenção de muitas pessoas para transformar suas vidas.  </div>
         <div class="p2"> 	 Se você ou alguém que você conhece gostaria de perder peso naturalmente, você deve assistir a este vídeo agora!  </div>
-        <a href="https://protocolozerobarriga.com/" class="article-button">VER VÍDEO AGORA</a>
+        <a href="https://beatrizgoes.store/" class="article-button">VER VÍDEO AGORA</a>
       </div>
       <div>
         <div class="footer_txt"> 		 ISSO É UM ADVERTORIAL E NÃO UM ARTIGO DE NOTÍCIA REAL, BLOG OU ATUALIZAÇÃO DE PROTEÇÃO DO CONSUMIDOR  	</div>
